--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ N8N_BASIC_AUTH_PASSWORD=admin123
 N8N_HOST=localhost
 N8N_PORT=5678
 GENERIC_TIMEZONE=Europe/Moscow
+N8N_DEPLOY_TOKEN=deploy_token
+
+OPENAI_API_KEY=""
